--- a/client/src/app/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/mobile-nav/mobile-nav.component.html
@@ -1,9 +1,9 @@
 <div class="nav-item">
-  <app-book-icon [size]="26" [color]="'#6c757d'" />
+  <app-icon [name]="IconName.BookOpen" color="#6c757d" [size]="26" />
   <span class="nav-label active">Home</span>
 </div>
 <div class="nav-item">
-  <app-book-icon [size]="26" [color]="'#6c757d'" />
+  <app-icon [name]="IconName.BookOpen" color="#6c757d" [size]="26" />
   <span class="nav-label">Search</span>
 </div>
 <div class="nav-item central">
@@ -16,6 +16,6 @@
   <span class="nav-label">Messages</span>
 </div>
 <div class="nav-item">
-  <app-profile-icon [size]="26" [color]="'#6c757d'" />
+  <app-icon [name]="IconName.User" color="#6c757d" [size]="26" />
   <span class="nav-label">Profile</span>
 </div>
