--- a/client/src/app/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/training-day-notification/training-day-notification.component.html
@@ -4,7 +4,7 @@
   <div class="training-notification-card">
     <div class="training-notification-header">
       <h5>Training Day Summary</h5>
-      <app-close-icon [size]="22" (click)="deleteNotification(notification.id)" />
+      <app-icon [size]="22" [name]="IconName.X" (click)="deleteNotification(notification.id)" />
     </div>
     <div class="training-notification-body">
       <p>
@@ -17,9 +17,9 @@
       <div class="exercise-headline" (click)="toggleExerciseTab(notification)">
         Exercises
         @if (exerciseTabCollapsed) {
-          <app-chevron-down-icon />
+          <app-icon [name]="IconName.ChevronDown" />
         } @else {
-          <app-chevron-up-icon />
+          <app-icon [name]="IconName.ChevronUp" />
         }
       </div>
       <div class="exercises-container" [@toggleCollapse]="exerciseTabCollapsed ? 'collapsed' : 'expanded'">
