Replaced all icons overwork icon button component

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between align-items-center">
     <app-headline [subHeading]="'own'" [heading]="'plans'" />
 
-    <app-icon-button [iconClass]="'bx bx-plus'" (buttonClick)="createNewPlan()" />
+    <app-icon-button [iconName]="IconName.FeatherUserPlus" (buttonClick)="createNewPlan()" />
   </div>
 </div>
 
