--- a/client/src/app/components/icon-button/icon-button.component.html
+++ b/client/src/app/components/icon-button/icon-button.component.html
@@ -1,9 +1,3 @@
-@if (tooltipTitle()) {
-  <button type="button" class="btn btn-light btn-md m-1" [appTooltip]="tooltipTitle()" (click)="onClick()">
-    <i [class]="iconClass()"></i>
-  </button>
-} @else {
-  <button type="button" class="btn btn-light btn-md m-1" (click)="onClick()">
-    <i [class]="iconClass()"></i>
-  </button>
-}
+<button type="button" class="custom-button" (click)="onClick()">
+  <app-icon [name]="iconName()" [size]="15" />
+</button>
