--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -1,3 +1,39 @@
 .b-inherit {
   background-image: url('/images/background/white-3.avif') !important;
 }
+
+.custom-button {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition:
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
+  outline: none;
+  box-shadow: none;
+}
+
+.custom-button:hover {
+  background-color: #e2e6ea;
+  border-color: #dae0e5;
+}
+
+.custom-button:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25);
+}
+
+.custom-button:active {
+  background-color: #dae0e5;
+  border-color: #d3d9df;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) inset;
+}
+
+.custom-button:disabled {
+  opacity: 0.65;
+  cursor: not-allowed;
+}
