--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -1,8 +1,6 @@
-.b-inherit {
-  background-image: url('/images/background/white-3.avif') !important;
-}
+//TODO: use colors of variables here
 
-.custom-button {
+:host {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -15,25 +13,25 @@
     border-color 0.15s ease-in-out;
   outline: none;
   box-shadow: none;
-}
 
-.custom-button:hover {
-  background-color: #e2e6ea;
-  border-color: #dae0e5;
-}
+  &:hover {
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+  }
 
-.custom-button:focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25);
-}
+  &:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.25);
+  }
 
-.custom-button:active {
-  background-color: #dae0e5;
-  border-color: #d3d9df;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) inset;
-}
+  &:active {
+    background-color: #dae0e5;
+    border-color: #d3d9df;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) inset;
+  }
 
-.custom-button:disabled {
-  opacity: 0.65;
-  cursor: not-allowed;
+  &:disabled {
+    opacity: 0.65;
+    cursor: not-allowed;
+  }
 }
