Add mail component use new icons in profile

--- a/client/src/app/Pages/modal-pages/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
+++ b/client/src/app/Pages/modal-pages/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
@@ -5,7 +5,7 @@
       <p>Altes Profilbild</p>
     </div>
     <div class="mx-3">
-      <i class="bx bx-right-arrow-alt" style="font-size: 3rem; color: #007bff"></i>
+      <app-icon [name]="IconName.ARROW_RIGHT" [size]="32" style="font-size: 3rem; color: #007bff" />
     </div>
     <div>
       <img [src]="newProfilePicture" alt="Neues Profilbild" class="img-thumbnail" style="width: 150px; height: 150px" />
