--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -90,6 +90,10 @@
       ></path>
       <line x1="1" y1="1" x2="23" y2="23"></line>
     }
+    @case (IconName.MAIL) {
+      <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+      <polyline points="22,6 12,13 2,6"></polyline>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
