--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -173,7 +173,7 @@
 
 @if (!isMobile) {
   <div class="fixed-bottom-bar">
-    <i class="bx bx-left-arrow-alt icon" (click)="navigateWeek(-1)"></i>
-    <i class="bx bx-right-arrow-alt icon" (click)="navigateWeek(1)"></i>
+    <app-icon [name]="IconName.ArrowLeft" [size]="24" (click)="navigateWeek(-1)"/>
+    <app-icon [name]="IconName.ARROW_RIGHT" [size]="24" (click)="navigateWeek(1)" />
   </div>
 }
