--- a/client/src/app/Pages/training-view/training-view.component.scss
+++ b/client/src/app/Pages/training-view/training-view.component.scss
@@ -44,7 +44,7 @@
   padding: 1rem 0;
 }
 
-.fixed-bottom-bar .icon {
+.fixed-bottom-bar app-icon {
   margin: 0 15px;
   cursor: pointer;
   font-size: 1.75rem;
