Use  tooltip directive in app icon button

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -2,7 +2,11 @@
   <div class="d-flex justify-content-between align-items-center">
     <app-headline [subHeading]="'own'" [heading]="'plans'" />
 
-    <app-icon-button [iconName]="IconName.FeatherUserPlus" (buttonClick)="createNewPlan()" />
+    <app-icon-button
+      [iconName]="IconName.PLUS"
+      (buttonClick)="createNewPlan()"
+      [tooltipTitle]="'Trainingsplan erstellen'"
+    />
   </div>
 </div>
 
