--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -1,6 +1,6 @@
 //TODO: use colors of variables here
 
-:host {
+.icon-button {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -8,10 +8,10 @@
   border: 1px solid #f8f9fa;
   border-radius: 0.25rem;
   cursor: pointer;
+  outline: none;
   transition:
     background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
-  outline: none;
   box-shadow: none;
 
   &:hover {
