--- a/client/src/app/components/icon-button/icon-button.component.scss
+++ b/client/src/app/components/icon-button/icon-button.component.scss
@@ -6,6 +6,7 @@
   line-height: 1.5;
   background-color: #f8f9fa;
   border: 1px solid #f8f9fa;
+  border: 1px solid rgba(118, 118, 118, 0.1);
   border-radius: 0.25rem;
   cursor: pointer;
   outline: none;
