Move mobile detection service to more accesible place

--- a/client/src/app/Pages/training-view/training-view.component.html
+++ b/client/src/app/Pages/training-view/training-view.component.html
@@ -1,7 +1,7 @@
 @if (!(dataViewLoaded$ | async)) {
   <app-skeleton-training-table />
 } @else {
-  @let mobileView = mobileDeviceDetectionService.isMobileView;
+  @let mobileView = mobileDeviceDetectionService.isMobileDevice;
 
   <form (submit)="onSubmit($event)" class="mt-4" id="form">
     <div class="headline-container" [ngClass]="{ 'background-image': mobileView }">
