--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -1,75 +1,82 @@
-<div class="container my-md-5 my-0">
-  <div class="bg-white shadow rounded overflow-hidden profile-container">
-    <div class="px-4 pt-0 pb-4 cover">
-      <div class="media align-items-end profile-head">
-        <div class="profile mr-3">
-          <img
-            #profileImage
-            [src]="profile.pictureUrl || '/images/profile-placeholder.webp'"
-            alt="Profilbild"
-            width="130"
-            id="profile-image"
-            class="rounded mb-2 img-thumbnail"
+@if (profile$ | async; as profile) {
+  <div class="container my-md-5 my-0">
+    <div class="bg-white shadow rounded overflow-hidden profile-container">
+      <div class="px-4 pt-0 pb-4 cover">
+        <div class="media align-items-end profile-head">
+          <div class="profile mr-3">
+            <img
+              #profileImage
+              [src]="profile.pictureUrl || '/images/profile-placeholder.webp'"
+              alt="Profilbild"
+              width="130"
+              id="profile-image"
+              class="rounded mb-2 img-thumbnail"
+            />
+            <input #fileInput type="file" id="file-input" class="file-input" (change)="handleImageUpload($event)" />
+          </div>
+          <div class="media-body mb-3 text-dark">
+            <h4 class="mt-0 mb-0">{{ profile.username }}</h4>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light p-4 mb-2 d-flex justify-content-end text-center">
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item">
+            <h5 class="font-weight-bold mb-0 d-block">215</h5>
+            <small class="text-muted"> <i class="fas fa-image mr-1"></i>Photos</small>
+          </li>
+          <li class="list-inline-item">
+            <h5 class="font-weight-bold mb-0 d-block">745</h5>
+            <small class="text-muted"> <i class="fas fa-user mr-1"></i>Followers</small>
+          </li>
+          <li class="list-inline-item">
+            <h5 class="font-weight-bold mb-0 d-block">340</h5>
+            <small class="text-muted"> <i class="fas fa-user mr-1"></i>Following</small>
+          </li>
+        </ul>
+      </div>
+
+      <div class="px-4 py-3">
+        <h5 class="mb-0">Freunde</h5>
+        <div class="d-flex justify-content-end mb-3 mt-3">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Freunde suchen"
+            aria-label="Search"
+            (input)="filterFriends($event)"
           />
-          <input #fileInput type="file" id="file-input" class="file-input" (change)="handleImageUpload($event)" />
+
+          <app-icon-button [iconName]="IconName.FeatherUserPlus" (click)="openAddFriendModal()" />
+          <app-icon-button [iconName]="IconName.MAIL" (click)="openFriendRequestsModal()" />
         </div>
-        <div class="media-body mb-3 text-dark">
-          <h4 class="mt-0 mb-0">{{ profile.username }}</h4>
-        </div>
-      </div>
-    </div>
-    <div class="bg-light p-4 mb-2 d-flex justify-content-end text-center">
-      <ul class="list-inline mb-0">
-        <li class="list-inline-item">
-          <h5 class="font-weight-bold mb-0 d-block">215</h5>
-          <small class="text-muted"> <i class="fas fa-image mr-1"></i>Photos</small>
-        </li>
-        <li class="list-inline-item">
-          <h5 class="font-weight-bold mb-0 d-block">745</h5>
-          <small class="text-muted"> <i class="fas fa-user mr-1"></i>Followers</small>
-        </li>
-        <li class="list-inline-item">
-          <h5 class="font-weight-bold mb-0 d-block">340</h5>
-          <small class="text-muted"> <i class="fas fa-user mr-1"></i>Following</small>
-        </li>
-      </ul>
-    </div>
 
-    <div class="px-4 py-3">
-      <h5 class="mb-0">Freunde</h5>
-      <div class="d-flex justify-content-end mb-3 mt-3">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Freunde suchen"
-          aria-label="Search"
-          (input)="filterFriends($event)"
-        />
-
-        <app-icon-button [iconName]="IconName.FeatherUserPlus" (click)="openAddFriendModal()" />
-        <app-icon-button [iconName]="IconName.MAIL" (click)="openFriendRequestsModal()" />
-      </div>
-
-      <div class="row">
-        @if (friends.length === 0) {
-          <app-alert
-            alertType="light"
-            alertText="Du hast momentan keine Freunde. Füge einige hinzu, um dein Netzwerk zu erweitern!"
-          ></app-alert>
-        } @else if (filteredFriends.length === 0) {
-          <app-alert alertType="light" alertText="Du hast keine Freunde, die zu dieser Suchanfrage passen"></app-alert>
-        } @else {
-          @for (friend of filteredFriends; track friend) {
-            <div class="col-12 mb-3">
-              <app-friend-card
-                [friend]="friend"
-                [mode]="existingFriendCardMode"
-                (confirmEvent)="onFriendRemove($event)"
-              ></app-friend-card>
-            </div>
+        <div class="row">
+          @if (friends.length === 0) {
+            <app-alert
+              alertType="light"
+              alertText="Du hast momentan keine Freunde. Füge einige hinzu, um dein Netzwerk zu erweitern!"
+            ></app-alert>
+          } @else if (filteredFriends.length === 0) {
+            <app-alert
+              alertType="light"
+              alertText="Du hast keine Freunde, die zu dieser Suchanfrage passen"
+            ></app-alert>
+          } @else {
+            @for (friend of filteredFriends; track friend) {
+              <div class="col-12 mb-3">
+                <app-friend-card
+                  [friend]="friend"
+                  [mode]="existingFriendCardMode"
+                  (confirmEvent)="onFriendRemove($event)"
+                ></app-friend-card>
+              </div>
+            }
           }
-        }
+        </div>
       </div>
     </div>
   </div>
-</div>
+} @else {
+  <app-spinner />
+}
