--- a/client/src/app/percentage-circle-visualisation/percentage-circle-visualisation.component.scss
+++ b/client/src/app/percentage-circle-visualisation/percentage-circle-visualisation.component.scss
@@ -1,4 +1,11 @@
+:host {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  color: #333;
+}
+
 .progress-ring {
-  position: absolute;
   transform: rotate(180deg);
 }
