--- a/client/src/app/percentage-circle-visualisation/percentage-circle-visualisation.component.html
+++ b/client/src/app/percentage-circle-visualisation/percentage-circle-visualisation.component.html
@@ -12,8 +12,8 @@
 
     <!-- Gradient for the progress ring -->
     <linearGradient id="progressGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" style="stop-color: #ffffff; stop-opacity: 1" />
-      <stop offset="100%" style="stop-color: #f8f9fa; stop-opacity: 1" />
+      <stop offset="0%" style="stop-color: #bcbcbc; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #bdbdbd; stop-opacity: 1" />
     </linearGradient>
   </defs>
 
@@ -21,7 +21,7 @@
   <circle
     class="progress-ring__background"
     stroke="url(#backgroundGradient)"
-    [attr.stroke-width]="size() / 17.5"
+    [attr.stroke-width]="size() / 10"
     fill="transparent"
     [attr.r]="size() / 2 - 5"
     [attr.cx]="size() / 2"
@@ -32,7 +32,7 @@
   <circle
     class="progress-ring__circle"
     stroke="url(#progressGradient)"
-    [attr.stroke-width]="size() / 17.5"
+    [attr.stroke-width]="size() / 10"
     fill="transparent"
     [attr.r]="size() / 2 - 5"
     [attr.cx]="size() / 2"
