Remove percentage component

--- a/client/src/app/components/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/components/training-plan-card/training-plan-card.component.html
@@ -49,10 +49,6 @@
         (buttonClick)="showDeleteTrainingPlanModal()"
       ></app-icon-button>
     </div>
-    <app-percentage-circle-visualisation
-      [size]="37.5"
-      [showPercentageText]="true"
-      [percentage]="trainingPlan.percentageFinished"
-    />
+    <div>{{ trainingPlan.percentageFinished }}%</div>
   </div>
 </div>
