--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -94,6 +94,9 @@
       <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
       <polyline points="22,6 12,13 2,6"></polyline>
     }
+    @case (IconName.PLAY) {
+      <polygon points="5 3 19 12 5 21 5 3"></polygon>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
