Implement click listener for icon component

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -2,6 +2,8 @@
   <div class="d-flex justify-content-between align-items-center">
     <app-headline [subHeading]="'own'" [heading]="'plans'" />
 
+    <app-icon [name]="IconName.PLUS" (clicked)="createNewPlan()" />
+
     <app-icon-button
       [iconName]="IconName.PLUS"
       (buttonClick)="createNewPlan()"
