Implement alternative modal button + use success as default option in toast

--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -10,6 +10,7 @@
       </div>
       @if (footer) {
         <div class="modal-footer">
+          <button type="button" class="btn btn-primary" (click)="confirm()">{{ alternativeButtonText }}</button>
           <button type="button" class="btn btn-primary" (click)="confirm()">
             {{ confirmButtonText }}
           </button>
